remove margin override on query loop list items

--- a/src/scss/shared/blocks/wp-block-query.scss
+++ b/src/scss/shared/blocks/wp-block-query.scss
@@ -1,7 +1,7 @@
 :root .wp-block-query {
 	& > ul > li {
 		overflow: auto;
-		margin-bottom: 1.5em;
+		//margin-bottom: 1.5em;
 	}
 
 	.wp-block-post-featured-image {
