remove top margin on global sidebar

--- a/src/scss/shared/_sidebar.scss
+++ b/src/scss/shared/_sidebar.scss
@@ -15,7 +15,7 @@
 		flex: 0;
 		flex-basis: 300px;
 		font-size: 0.85rem;
-		margin-top: 1.5em;
+		//margin-top: 1.5em;
 		position: relative;
 
 		// Sidebars in rows that follow a header don't need a top margin (archive pages)
